
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static bool terminates_asm_line(char c) {
 return c == '\0' || c == '\n' || c == '\r' || c == ';' ;
}
